[package]
name = "ruten-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
detour = "0.8.1"
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4"
ruten-shared = { path = "../ruten-shared" }
winapi = { version = "0.3.9", features = ["consoleapi", "libloaderapi", "minwindef"] }